Feat: Add some explanations on READ.me file.

--- a/README.me
+++ b/README.me
@@ -1,1 +1,15 @@
-# PROJET 6 - " PIIQUANTE " (API)
+# PROJECT6 - "PIIQUANTE" (API) - OpenClassRooms.
+
+This is the REST API I created for one of my OpenClassRooms training projects.
+For this project I am using node.js and its framework express.js. Also, I use MongoDB Atlas as database and some dependencies like bcrypt, multer, jsonwebtoken, mongoose..
+
+## Launch server 
+
+To start the server, you only need to install node.js, so you must enter this command in your terminal:
+
+`Node server`
+
+
+
+
+
