Feat : secure my server (HTTP => HTTPS)

--- a/README.me
+++ b/README.me
@@ -7,7 +7,7 @@ For this project I am using node.js and its framework express.js. Also, I use Mo
 
 To start the server, you only need to install node.js, so you must enter this command in your terminal:
 
-`Node server`
+`node server`
 
 
 
